k8s/services/discount-bandit/discount-bandit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-bandit
  namespace: discount-bandit
  labels:
    app: discount-bandit
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-bandit
  template:
    metadata:
      labels:
        app: discount-bandit
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: discount-bandit
          image: cybrarist/discount-bandit:v4.0.2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/database/sqlite
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  namespace: discount-bandit
  name: discount-bandit
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: discount-bandit
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: discount-bandit
  namespace: discount-bandit
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`discount.rvserver.online`)
      kind: Rule
      services:
        - name: discount-bandit
          port: 80
